[gd_scene load_steps=4 format=3 uid="uid://c7rxu3e3caavw"]

[ext_resource type="Texture2D" uid="uid://ct3yhqb7sajsm" path="res://assets/Standard Button.png" id="1_8x6f0"]
[ext_resource type="Script" uid="uid://c68ivvdx80u3c" path="res://ui/button.gd" id="1_ikl6s"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ikl6s"]
size = Vector2(293.023, 68.8311)

[node name="Button" type="Node2D"]
scale = Vector2(3, 3)
script = ExtResource("1_ikl6s")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.286667, 0.256667)
texture = ExtResource("1_8x6f0")

[node name="Area2D" type="Area2D" parent="Sprite2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/Area2D"]
position = Vector2(-1.77428e-05, -0.64935)
shape = SubResource("RectangleShape2D_ikl6s")

[node name="Label" type="Label" parent="."]
offset_left = -32.0
offset_top = -10.6667
offset_right = 34.0
offset_bottom = 12.3333
text = "BUTTON"
horizontal_alignment = 1

[connection signal="input_event" from="Sprite2D/Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Sprite2D/Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Sprite2D/Area2D" to="." method="_on_area_2d_mouse_exited"]
